# pocketmap

./: .gitignore  README.md  gen.py  pom.xml  settings.gradle.kts
app/: pom.xml
app/src/main/java/dev/dylanburati/: App.java
benchmarks/: .gitignore  README.md  pom.xml
benchmarks/src/main/java/dev/dylanburati/pocketmap/: StringIntMapBenchmark.java
lib/: build.gradle.kts
lib/src/jmh/java/dev/dylanburati/pocketmap/: StringIntMapBenchmark.java
lib/src/jmh/java/dev/dylanburati/shrinkwrap/: StringIntMapBenchmark.java
lib/src/main/java/dev/dylanburati/pocketmap/: BooleanPocketMap.java  BytePocketMap.java  DefaultHasher.java  DoublePocketMap.java  FloatPocketMap.java  Hasher.java  IntPocketMap.java  KeyStorage.java  LongPocketMap.java  PocketMap.java  ShortPocketMap.java
lib/src/main/java/dev/dylanburati/shrinkwrap/: CompactStringBooleanMap.java  CompactStringByteMap.java  CompactStringDoubleMap.java  CompactStringFloatMap.java  CompactStringIntMap.java  CompactStringLongMap.java  CompactStringMap.java  CompactStringShortMap.java  DefaultHasher.java  Hasher.java  KeyStorage.java
lib/src/test/java/dev/dylanburati/pocketmap/: BooleanPocketMapTest.java  BytePocketMapTest.java  DoublePocketMapTest.java  FloatPocketMapTest.java  Helpers.java  IntPocketMapTest.java  LongPocketMapTest.java  PocketMapTest.java  ShortPocketMapTest.java
lib/src/test/java/dev/dylanburati/shrinkwrap/: CompactStringBooleanMapTest.java  (+8 more)
pocketmap/: pom.xml
proccorder/: Cargo.toml  LICENSE
proccorder/src/: main.rs  types.rs
proccorder/src/collector/: linux.rs  macos.rs  windows.rs
(+18 files in other folders)
