[package]
name = "proccorder"
version = "1.2.0"
authors = ["Dylan Burati <dylanburati@protonmail.com>", "Alisue <lambdalisue@gmail.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
base64 = "0.21.7"
metrics = "0.22.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.155"
libproc = "0.14.2"
mach2 = "0.4"
once_cell = "1.13.1"
rlimit = "0.10.0"

[target.'cfg(target_os = "linux")'.dependencies]
once_cell = "1.13.1"
procfs = { version = "0.16.0", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.52.0"
features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
]
